--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
-  <body>
+  <body class="body">
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
