WIP GitHub vCard

--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>GitHub Data vCard</title>
   </head>
   <body class="body">
+    <!-- <header>
+    <h1>${data.name}</h1>
+    </header>
+    <main>
+        <div class="basics">
+          <h2>The Basics</h2>
+            <ul>
+                <li><span>Name:</span> ${data.name}</li>
+                <li><span>GitHub URL:</span> <a href=${data.html_url}>${data.login}</a></li>
+                <li><span>Email:</span> ${data.email}</li>
+                <li><span>Company:</span> ${data.company}</li>
+                <li><span>Website:</span> <a href=${data.blog}>stephen-boynton.wordpress.com</a></li>
+            </ul>
+        </div>
+        <article class="story">
+          <h2>The Story</h2>
+              <p>${data.bio}</p>
+              <img src="${data.avatar_url}">
+        </article>
+    </main> -->
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
